--- a/main.yml
+++ b/main.yml
@@ -39,8 +39,8 @@
       group: root
       mode: 0644
 
-- import_playbook: nginx_proxy.yml
+- import_playbook: additional_playbooks/nginx_proxy.yml
 # - import_playbook: database_setup.yml
 # - import_playbook: nameserver_setup.yml
-- import_playbook: gitlab_install.yml
-- import_playbook: kube_install.yml
+- import_playbook: additional_playbooks/gitlab_install.yml
+- import_playbook: additional_playbooks/kube_install.yml
