--- a/main.yml
+++ b/main.yml
@@ -27,7 +27,7 @@
       state: present
       key: "{{ public_key }}"
 
-  - name: Change root password to xyz
+  - name: Change root password
     user:
       name: root
       password: "{{ root_password | password_hash('sha512') }}"
