--- a/main.yml
+++ b/main.yml
@@ -53,5 +53,5 @@
 - import_playbook: additional_playbooks/nginx_proxy.yml
 # - import_playbook: database_setup.yml
 # - import_playbook: nameserver_setup.yml
-- import_playbook: additional_playbooks/gitlab_install.yml
-- import_playbook: additional_playbooks/kube_install.yml
+# - import_playbook: additional_playbooks/gitlab_install.yml
+# - import_playbook: additional_playbooks/kube_install.yml
