--- a/gitlab_install.yml
+++ b/gitlab_install.yml
@@ -1,28 +1,10 @@
 ---
-- hosts: gitlab
+- hosts: git.idm.endorlan.net
+  become: true
 
-  tasks:
-  - name: Update cache and install requirements
-    apt:
-      name: '{{ item }}'
-      state: present
-      update_cache: true
-    with_items:
-      - curl
-      - openssh-server
-      - ca-certificates
-      - perl
-      - postfix
+  vars:
+    - gitlab_external_url: "http://{{ ansible_host }}"
+    - gitlab_time_zone: "ETC"
 
-  - name: Install GitLab repo
-    shell: curl https://packages.gitlab.com/install/repositories/gitlab/gitlab-ee/script.deb.sh | sudo bash
-    args:
-      warn: false
-
-# Set env for url?
-  - name: Install GitLab
-    apt:
-      name: gitlab-ee
-      state: present
-    environment:
-      '{{ ext_url }}'
+  roles:
+    - geerlingguy.gitlab
