--- a/vars/main.yml
+++ b/vars/main.yml
@@ -6,7 +6,7 @@ security_ssh_permit_empty_password: "no"
 security_ssh_challenge_response_auth: "no"
 security_ssh_gss_api_authentication: "no"
 security_ssh_x11_forwarding: "no"
-security_sudoers_passworded: ['sean']
+#security_sudoers_passworded: ['sean']
 # Other sec things
 security_autoupdate_enabled: true
 security_autoupdate_reboot: false
